[project]
name = "black_scholes_options_pricing_engine"
version = "0.1.0"
description = "Deployable Black-Scholes option pricing engine with interactive charts and Greek analytics."
authors = [
  {name = "Black Scholes Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=2.3",
  "numpy>=1.24",
  "plotly>=6.0",
  "pandas>=2.1",
  "gunicorn>=21.0",
  "pytest>=8.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Flask",
  "Topic :: Office/Business :: Financial",
]

[project.scripts]
black-scholes-engine = "run:main"
